# vectoramp-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/vectoramp/: __init__.py  client.py  connections.py  embeddings.py  exceptions.py  resources.py  sources.py  transport.py  types.py
tests/: test_client.py  test_connections_and_sources.py
